api_versioned_docs/version-12.1.0/avalonia/controls/markdownimageloader.mdx
---
title: 'MarkdownImageLoader'
hide_title: true
slug: '/avalonia/controls/markdownimageloader'
uid: 'Avalonia.Controls.MarkdownImageLoader'
commentId: 'T:Avalonia.Controls.MarkdownImageLoader'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.Markdown'
assembly: 'Avalonia.Controls.Markdown'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">MarkdownImageLoader Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.Markdown</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.Markdown</code>
</div>
</div>

<div className="apiref-page__lead">

An interface used to resolve images in the markdown.

</div>

<div className="apiref-page__signature">

```csharp
public class MarkdownImageLoader
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> MarkdownImageLoader
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [MarkdownImageLoader](#uid-5488669a91) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-5488669a91"></span>

### MarkdownImageLoader Constructor

```csharp
public MarkdownImageLoader()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [LoadImageAsync](#uid-10527f7ed4) | Resolves an Image from a Url. |

<section className="apiref-page__member-entry">

<span id="uid-10527f7ed4"></span>

### LoadImageAsync Method

Resolves an Image from a Url.

```csharp
public System.Threading.Tasks.Task<Avalonia.Media.IImage> LoadImageAsync(string url)
```

#### Parameters

`url` string

Url to Resolve.


#### Returns

System.Threading.Tasks.Task&lt;[Avalonia.Media.IImage](xref:Avalonia.Media.IImage)&gt;

Image


</section>

</ApiRefPage>

